ChangeLog for package moot

moot-v1.0.4 Tue,  2 Dec 2003 13:26:40 +0100
  + renamed from 'dwdst' to 'moot'
	
v1.0.3 Tue,  2 Dec 2003 02:13:52 +0100
  + changes for compilation with g++-3.2
    - removed many redundant param-default specifications in non-prototype declarations
    - liberally sprinkled 'typename' keywords where g++ requested them
    - removed 'dopen()' method from [io]ccBinStream -- looks like
      there's no good way to make c++ streams jive with fds: ugly but true.
  + NOTE:
    - problems compiling on helios (RedHat) with a newer version
	of bison++ (i.e. not my 'flex++bison++' package) -- g++ eventually
	pukes with a complaint about 'YY_BUFFER_STATE' not being a defined
	type.  SOLUTION: dropping in 'flexskel.*', 'bison.*' from the native
	flex++ / bison++ distribution(s) seems to have fixed things.
	
v1.0.2 Mon, 25 Aug 2003 04:04:44 +0200
  + added mootHMMTrainer class and executable 'mootrain'
	- names may change to speed things up for fully supervised training
	  with kmax=3
	- Even this API still needs some way to handle unknown tokens for
	  n-gram generation...
  + added namespace 'moot', shoved everything I could into it
	- still global: flex++/bison++ lexers/parsers
	  * couldn't get namespaces to work with these - got
	    alleged conflicts with stdio.h
  + wrote many docs
  + STILL todo:
	- missing a decent string API for mootCHMM ...
	- get GenGetopt::cmdline_[ch] to stop complaining about
	  command-lines overriding config-files...


v1.0.1 Sun, 24 Aug 2003 00:37:25 +0200
  + (mootCHMM::TagMorphMap)s now handled as pointers, analysis-sets
    are stored with corresponding tags in the state-table
  + Added top-level interface structure (mootHMM::ViterbiPathNode*)
  + Still missing:
	- string-set interface to mootCHMM::viterbi_step()
	- *HMM::can_flush() , *HMM::viterbi_flush()
	  ~ ought to be easy to implement
	
v1.0.0 Thu, 21 Aug 2003 13:37:21 +0200
  + new class for morphological analysis: 'mootMorph'